<resources>
    <string name="app_name">Transit Droid</string>
    <string name="item_one">Menu Item One</string>
    <string name="item_two">Menu Item Two</string>
    <string name="item_three">Menu Item Three</string>
    <string name="item_four">Menu Item Four</string>
    <string name="profile_mycard">My Card</string>
    <string name="profile_purchase">Purchase</string>
    <string name="profile_usage">My Usage</string>
    <string name="profile_schedule">Schedule</string>
    <string name="profile_theme">Themes/Display</string>
    <string name="profile_register">Register Device</string>
    <string name="menubutton">If you do not happen to have an ActionBar, click here to activate the SlideMenu!</string>
    <string name="photo">Picture</string>
    <string name="username">User Name</string>
    <string name="settings">Settings</string>
    <string name="opus_setting">OPUS CARD</string>
    <string name="theme_text">Choose Theme</string>
    <string name="profile_setting">PROFILE</string>
    <string name="picture_show">Show Picture</string>
    <string name="account_setting">ACCOUNT</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="display_name">Display Name</string>
    <string name="settings_save">Save Changes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="windows8">Segoe UI Light</string>
	<string name="account_redirect">"In order to manage your account, visit the website at <a href="www.transitdroid.net">www.transitdroid.net.</a></string>
	<string name="account_redir">"In order to manage you account, please visit the website at: "</string>
	<string name="url"><a href="www.transitdroid.net">www.transitdroid.net</a></string>
	<string name="usage_title">Usage details</string>
	<string name="card_original">Original</string>
	<string name="card_grey">Black Flower</string>
	<string name="card_green"></string>
	<string name="card_greenn">Green Flower</string>
	<string name="card_indigo">Ancient</string>
	<string name="card_classic">Classic</string>
	<string name="card_ginky">Modern</string>
	<string name="select">Select</string>
	<string-array
        name="plan_type_array">
        <item>Choose</item>
        <item>Single</item>
        <item>Daily</item>
        <item>Nightly</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
	<string name="item_opus">My Card</string>
	<string name="item_profile">My Profile</string>
	<string name="item_usage">My Usage</string>
	<string name="item_purchase">Purchase</string>
	<string name="item_bus">My Bus Schedule</string>
	<string name="item_metro">My Metro Schedule</string>
	<string name="item_themes">Themes/Display</string>
	<string name="item_register">Register Device</string>
	<string name="item_about">About</string>
	<string name="item_myaccount">My Account</string>
	<string name="item_opus_desc">My Card</string>
	<string name="item_profile_desc">My Profile</string>
	<string name="item_usage_desc">My Usage</string>
	<string name="item_purchase_desc">Purchase</string>
	<string name="item_bus_desc">Bus Schedule</string>
	<string name="item_metro_desc">Metro Schedule</string>
	<string name="item_themes_desc">Themes/Display</string>
	<string name="item_register_desc">Register Device</string>
	<string name="item_about_desc">About</string>
	<string name="capstone">2012 - 2013 Capstone Project</string>
	<string name="software">Software Engineering</string>
	<string name="team5">Team 5: Transit Droid Team</string>
	<string name="colaboration">In collaboaration with the STM</string>
	<string name="team">Team Members</string>
	<string name="austin">Austin Takam</string>
	<string name="paul">Paul Smelser</string>
	<string name="dani">Daniel Magni</string>
	<string name="razvan">Razvan-Lada Moldovan</string>
	<string name="yasser">Yasser Al-Hasan</string>
	<string name="theme_title">Themes</string>
	<string name="save">Save</string>
	<string name="register_message">To register this device to your online account, please enter you username and password. </string>
	<string name="not_register">If you do not yet have an account, you can create one at:</string>
	<string name="connect">Connect</string>
	<string name="disconnect">Disconnect</string>
	<string name="status">"Status: "</string>
	<string name="status_value"></string>
	<string name="bus_info">Given that this project is a proof of concept covering the transport system specific to Montreal, the bus/metro schedule could be found on the current transit system (STM) website. An mobile application specific to the STM can also be found on this website.</string>
	<string name="stm_url">For more info, please visit www.stm.info</string>
	<string name="but_clear">Clear</string>
	<string name="plan_title">Select the type of pass you wish to purchase</string>
	<string name="plan_occurence_title">Select the occurrence</string>
	<string name="plan_purchase">Passes</string>
	<string name="plan_exp">Exp Date</string>
	<string name="but_reset">Reset</string>
	<string name="but_purchase">Purchase</string>
	<string name="bus">Bus</string>
    <string name="subway">Subway</string>
    <string name="favorite">Favorites</string>
    <string name="stop_code">Stop code</string>
    <string name="stop_code_hint">Stop code (or line number).</string>
    <string name="please_enter_a_stop_code">Please, enter a stop code.</string>
    <string name="no_history">No history.</string>
    <string name="clear_history">Clear the history.</string>
    <string name="no_internet">No Internet connection!</string>
    <string name="select_bus_direction">Direction</string>
    <string name="select_bus_line_direction_and_number">Line %s - Direction</string>
    <string name="select_bus_line_detail_direction_and_number_and_direction">Line %1$s - Direction %2$s</string>
    <string name="select_bus_line_stop_and_number">Line %s - Stops</string>
    <string name="direction">Direction</string>
    <string name="direction_and_string">Direction %s</string>
    <string name="frequency">Frequency</string>
    <string name="change_direction">Other directions</string>
    <string name="see_bus_line_plan">Map (stm.info)</string>
    <string name="hours_string">Schedule</string>
    <string name="minutes">minutes</string>
    <string name="minutes_and_minutes">%s minutes</string>
    <string name="subway_line">Line</string>
    <string name="subway_lines">Lines</string>
    <string name="bus_line">Bus line</string>
    <string name="bus_lines">Bus lines</string>
    <string name="bus_lines_connecting">Bus lines connecting</string>
    <string name="no_bus_line">No bus line!</string>
    <string name="no_subway_line">No subway line!</string>
    <string name="line">Line</string>
    <string name="lines">Lines</string>
    <string name="green_line">Green line</string>
    <string name="green_line_short">Green</string>
	<string name="orange_line">Orange line</string>
	<string name="orange_line_short">Orange</string>
	<string name="yellow_line">Yellow line</string>
	<string name="yellow_line_short">Yellow</string>
	<string name="blue_line">Blue line</string>
	<string name="blue_line_short">Blue</string>
	<string name="select_subway_direction">Direction</string>
	<string name="select_subway_direction_and_name">%s line - Direction</string>
	<string name="first_trains">First trains</string>
	<string name="last_trains">Last trains</string>
	<string name="next_bus_stops">Next passages</string>
	<string name="next_bus_stops_and_source">Next passages (%s)</string>
	<string name="next_bus_stops_message_and_source">MonTransit retrieves the next bus stops passages in real time from %s.</string>
	<string name="next_bus_stops_message_auto">MonTransit retrieves the next bus stops passages in real time from the best source available.</string>
	<string name="next_bus_stops_note">%1$s: %2$s</string>
	<string name="other_bus_line">Other bus line(s)</string>
	<string name="closest_bus_stops">Closest stops</string>
	<string name="closest_bus_stops_error">Error while searching for closest stops.</string>
	<string name="subway_station">Subway station</string>
	<string name="subway_station_short">Station</string>
	<string name="subway_station_with_name_short">%1$s station</string>
	<string name="subway_stations">Subway stations</string>
	<string name="stations">Stations</string>
	<string name="stations_and_order">Stations (%s)</string>
	<string name="subway_stations_short">Stations</string>
	<string name="closest_subway_stations">Closest stations</string>
	<string name="closest_subway_stations_cancelled">Search for closest stations cancelled.</string>
	<string name="closest_subway_stations_error">Error while searching for closest stations.</string>
	<string name="reload_closest_stations">Closest stations</string>
	<string name="subway_station_descent_only">Descent only</string>
	<string name="bus_stops">Bus stops</string>
	<string name="bus_stops_short">Stops</string>
	<string name="bus_stops_short_and_direction">Stops (Direction %s)</string>
	<string name="bus_stop">Bus stop</string>
	<string name="bus_stop_short">Stop</string>
	<string name="bus_stop_and_line_short">Stop %1$s (Line %2$s)</string>
	<string name="bus_stop_removed">The bus line %s no longer passes at this bus stop!</string>
	<string name="bus_stop_descent_only">Descent only</string>
	<string name="bus_stop_no_info_and_source">No information on %2$s about the line %1$s at this bus stop.</string>
	<string name="waiting_for_location_fix">Waiting for location&#8230;</string>
	<string name="no_location_provider_available">No location provider available.\nYou need to enable location by wireless network or GPS satellites in your phone settings.</string>
	<string name="subway_status">Service status</string>
	<string name="subway_status_hour">Service status (%s)</string>
	<string name="subway_status_message">The STM post métro service disruptions lasting 20 minutes and more.\n\nhttp://twitter.com/stminfo</string>
	<string name="reload_subway_status">Service status</string>
	<string name="subway_status_updating">Updating service status&#8230;</string>
	<string name="subway_status_done">Service status updated.</string>
	<string name="subway_status_loading_cancelled">Update of the service status cancelled.</string>
	<string name="shake_closest_bus_line_stop_selected">Closest bus line stop selected</string>
	<string name="shake_closest_subway_line_station_selected">Closest subway line station selected</string>
	<string name="shake_closest_subway_station_selected">Closest subway station selected</string>
	<string name="shake_closest_bike_station_selected">Closest bike station selected</string>
	<string name="bike">Bike</string>
	<string name="bikes">Bikes</string>
	<plurals name="bikes_nb">
	    <item quantity="zero">No Bike!</item>
        <item quantity="one">%d bike</item>
        <item quantity="other">%d bikes</item>
    </plurals>
	<string name="dock">Dock</string>
	<string name="docks">Docks</string>
	<plurals name="docks_nb">
	    <item quantity="zero">No Dock!</item>
        <item quantity="one">%d dock</item>
        <item quantity="other">%d docks</item>
    </plurals>
	<string name="bike_station">Bike station</string>
	<string name="bike_stations">Bike stations</string>
	<string name="closest_bike_stations">Closest stations</string>
	<string name="closest_bike_stations_hour">Closest stations (%s)</string>
	<string name="closest_bike_stations_error">Error while searching for closest stations.</string>
	<string name="closest_bike_stations_cancelled">Search for closest stations cancelled.</string>
	<string name="bike_station_status">Availability</string>
	<string name="bike_station_status_hour">Availability (%s)</string>
	<string name="bike_station_not_installed">Not installed!</string>
	<string name="bike_station_locked">Locked!</string>
</resources>