<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rootRL" 
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                 <include layout="@layout/actionbar_menu" android:id="@+id/actionBarMenu"/>
<ListView
        android:id="@+id/listMenu"
        android:layout_below="@+id/actionBarMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#282828"
        android:dividerHeight="1dip"
        android:background="#3F3F3F"
        android:fadingEdge="none"
        android:listSelector="@drawable/list_selector">

    </ListView>
    
    <RelativeLayout
        android:id="@+id/layoutToMove"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/actionBar"
        android:background="#D8D8D8">
        
        <include layout="@layout/actionbar_layout" android:id="@+id/actionBar"/>
        
        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/actionBar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="openCloseMenu"
			android:src="@drawable/menu"
			android:background="@android:color/transparent" />

		<Button
		    android:id="@+id/separator"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/menuButton"
            android:background="@drawable/custom_button_black" />

		<FrameLayout
		    android:id="@+id/frameToMove"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/actionBar"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginBottom="10dp"
		    android:background="#F8F8F8" >

			<include
		        android:id="@+id/logo_tab"
		        android:layout_width="285dp"
		        layout="@layout/logo_tab" />

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="240dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="35dp"
			    android:layout_marginRight="35dp"
			    android:layout_marginTop="85dp"
			    android:text="@string/capstone"
			    android:textAppearance="?android:attr/textAppearanceLarge" />

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="194dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="35dp"
			    android:layout_marginRight="35dp"
			    android:layout_marginTop="135dp"
			    android:text="@string/software"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="160dp"
                android:text="@string/colaboration"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="195dp"
                android:text="@string/team5"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="220dp"
                android:text="@string/team"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/textView6"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="240dp"
                android:text="@string/austin"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/textView7"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="260dp"
                android:text="@string/dani"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/textView8"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="280dp"
                android:text="@string/paul"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/textView9"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="300dp"
                android:text="@string/razvan"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
                android:id="@+id/textView10"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="320dp"
                android:text="@string/yasser"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
		</FrameLayout>
        
    </RelativeLayout>
    
</RelativeLayout>
