<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rootRL" 
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                 <include layout="@layout/actionbar_menu" android:id="@+id/actionBarMenu"/>
<ListView
        android:id="@+id/listMenu"
        android:layout_below="@+id/actionBarMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="#282828"
        android:dividerHeight="1dip"
        android:background="#3F3F3F"
        android:fadingEdge="none"
        android:listSelector="@drawable/list_selector">

    </ListView>
    
    <RelativeLayout
        android:id="@+id/layoutToMove"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/actionBar"
        android:background="#D8D8D8">
        
        <include layout="@layout/actionbar_layout" android:id="@+id/actionBar"/>
        
        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/actionBar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="openCloseMenu"
			android:src="@drawable/menu"
			android:background="@android:color/transparent" />

		<Button
		    android:id="@+id/separator"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/menuButton"
            android:background="@drawable/custom_button_black" />

		<FrameLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_alignParentLeft="true"
		    android:layout_below="@+id/actionBar"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginBottom="10dp"
		    android:background="#F8F8F8" >

			<include
		        android:id="@+id/logo_tab"
		        android:layout_width="285dp"
		        layout="@layout/logo_tab" />

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="274dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="320dp"
			    android:text="@string/register_message"
			    android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="274dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="390dp"
			    android:text="@string/not_register"
			    android:textStyle="italic" />
			
			<TextView
			    android:id="@+id/textView3"
			    android:layout_width="162dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="420dp"
			    android:text="@string/url"
			    android:textStyle="bold" />
			
			<TextView
			    android:id="@+id/reg_url"
			    android:layout_width="104dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="80dp"
			    android:text="@string/username_label"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textStyle="bold" />
			
			<TextView
			    android:id="@+id/textView5"
			    android:layout_width="104dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="140dp"
			    android:text="@string/password_label"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textStyle="bold" />

			<EditText
			    android:id="@+id/username_text"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="110dp"
		    	android:layout_marginTop="70dp"
		    	android:layout_marginRight="10dp"
			    android:ems="10" >
			    <requestFocus />
			</EditText>

			<EditText
			    android:id="@+id/password_text"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="110dp"
		    	android:layout_marginTop="130dp"
		    	android:layout_marginRight="10dp"
			    android:ems="10"
			    android:inputType="textPassword" />

			<Button
			    android:id="@+id/but_connect"
			    android:layout_width="100dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="180dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="200dp"
			    android:text="@string/connect" />
			
			<Button
			    android:id="@+id/but_disconnect"
			    android:layout_width="107dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="40dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="200dp"
			    android:text="@string/disconnect" />
			
			<TextView
			    android:id="@+id/textView6"
			    android:layout_width="87dp"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="270dp"
			    android:text="@string/status"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textStyle="bold" />
			
			<TextView
			    android:id="@+id/status_message"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="90dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="270dp"
			    android:textAppearance="?android:attr/textAppearanceMedium"
			    android:textStyle="bold" />
			
		</FrameLayout>
    </RelativeLayout>
    
</RelativeLayout>
